--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,5 @@
 <h1>Log In</h1>
 <ul>
 	<li><a href="/auth/facebook">Facebook</a></li>
-	<li>Twitter</li>
-	<li>Google</li>
+	<li><a href="/auth/google">Google</a></li>
 </ul>
